1. Bootstrap 및 Custom CSS 준비 2. 기본 메뉴 구성 3. 라우팅 구성

--- a/public_html/views/play.ejs
+++ b/public_html/views/play.ejs
@@ -24,12 +24,12 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                          <ul class="nav navbar-nav">
-                              <li class="active"><a href="/index">홈</a></li>
+                              <li class=""><a href="/index">홈</a></li>
                               <li class=""><a href="/about">소개</a></li>
-                              <li class="dropdown">커뮤니티
+                              <li class="active dropdown">커뮤니티
                                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
                                    <ul class="dropdown-menu">
-                                        <li class=""><a href="/play">연주 게시판</a></li>
+                                        <li class="active"><a href="/play">연주 게시판</a></li>
                                         <li class=""><a href="/mentor">멘토 게시판</a></li>
                                         <li class=""><a href="/sheet">악보 게시판</a></li>
                                    </ul>
@@ -51,7 +51,7 @@
 
           <div class="container">
                <div class="row">
-                    TEST
+                    연주
                </div>
           </div>
      </body>
