--- a/public_html/views/about.ejs
+++ b/public_html/views/about.ejs
@@ -24,8 +24,8 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                          <ul class="nav navbar-nav">
-                              <li class="active"><a href="/index">홈</a></li>
-                              <li class=""><a href="/about">소개</a></li>
+                              <li class=""><a href="/index">홈</a></li>
+                              <li class="active"><a href="/about">소개</a></li>
                               <li class="dropdown">커뮤니티
                                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
                                    <ul class="dropdown-menu">
@@ -51,7 +51,7 @@
 
           <div class="container">
                <div class="row">
-                    TEST
+                    소개
                </div>
           </div>
      </body>
