--- a/public_html/views/mentor.ejs
+++ b/public_html/views/mentor.ejs
@@ -5,7 +5,7 @@
           <title>Music Community</title>
 
           <!-- Bootstrap CSS -->
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+          <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
           <!-- Custom Fix -->
           <link rel="stylesheet" type="text/css" href="css/custom.css">
      </head>
@@ -24,13 +24,13 @@
                     </div>
                     <div id="navbar" class="navbar-collapse collapse">
                          <ul class="nav navbar-nav">
-                              <li class="active"><a href="/index">홈</a></li>
+                              <li class=""><a href="/index">홈</a></li>
                               <li class=""><a href="/about">소개</a></li>
-                              <li class="dropdown">커뮤니티
+                              <li class="active dropdown">커뮤니티
                                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
                                    <ul class="dropdown-menu">
                                         <li class=""><a href="/play">연주 게시판</a></li>
-                                        <li class=""><a href="/mentor">멘토 게시판</a></li>
+                                        <li class="active"><a href="/mentor">멘토 게시판</a></li>
                                         <li class=""><a href="/sheet">악보 게시판</a></li>
                                    </ul>
                               </li>
@@ -51,7 +51,7 @@
 
           <div class="container">
                <div class="row">
-                    TEST
+                    멘토
                </div>
           </div>
      </body>
