--- a/public_html/views/mypage.ejs
+++ b/public_html/views/mypage.ejs
@@ -33,7 +33,7 @@
                     <div id="navbar" class="navbar-collapse collapse">
                          <ul class="nav navbar-nav">
                               <li class=""><a href="/index">홈</a></li>
-                              <li class="active"><a href="/about">소개</a></li>
+                              <li class=""><a href="/about">소개</a></li>
                               <li class="dropdown">
                                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">커뮤니티<span class="caret"></span></a>
                                    <ul class="dropdown-menu">
@@ -45,7 +45,7 @@
                          </ul>
 
                          <ul class="nav navbar-nav navbar-right">
-                              <li class="">
+                              <li class="active">
                                    <a href="/mypage"><span class="glyphicon glyphicon-user"></span>내 정보</a>
                               </li>
                               <li class="">
@@ -61,13 +61,14 @@
 
           <div class="container">
                <div class="row">
-                    소개
+                    TEST
                </div>
           </div>
 
           <!-- jQuery -->
           <script src="//code.jquery.com/jquery.js"></script>
           <!-- Bootstrap JavaScript -->
+          <!--script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script-->
           <script src="js/bootstrap.min.js"></script>
           <!-- Tether -->
           <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
