--- a/public_html/views/play.ejs
+++ b/public_html/views/play.ejs
@@ -2,16 +2,24 @@
 <html>
      <head>
           <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
           <title>Music Community</title>
 
           <!-- Bootstrap CSS -->
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+          <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
+          <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+          <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+          <![endif]-->
+
           <!-- Custom Fix -->
           <link rel="stylesheet" type="text/css" href="css/custom.css">
      </head>
 
      <body>
-          <nav class="navbar navbar-fixed-top">
+          <nav class="navbar navbar-default navbar-fixed-top">
                <div class="container">
                     <div class="navbar-header">
                          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -26,8 +34,8 @@
                          <ul class="nav navbar-nav">
                               <li class=""><a href="/index">홈</a></li>
                               <li class=""><a href="/about">소개</a></li>
-                              <li class="active dropdown">커뮤니티
-                                   <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
+                              <li class="active dropdown">
+                                   <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">커뮤니티<span class="caret"></span></a>
                                    <ul class="dropdown-menu">
                                         <li class="active"><a href="/play">연주 게시판</a></li>
                                         <li class=""><a href="/mentor">멘토 게시판</a></li>
@@ -35,24 +43,138 @@
                                    </ul>
                               </li>
                          </ul>
+
                          <ul class="nav navbar-nav navbar-right">
-                              <li>
-                                   <div class="form-group">
-                                        <input type="text" name="form-control" placeholder="검색...">
-                                   </div>
+                              <li class="">
+                                   <a href="/mypage"><span class="glyphicon glyphicon-user"></span>내 정보</a>
                               </li>
-                              <li>
-                                   <a href="/login"><span class="glyphicon glyphicon-off yavc-logout"></span>로그인</a>
+                              <li class="">
+                                   <a href="/login"><span class="glyphicon glyphicon-off"></span>로그인</a>
                               </li>
                          </ul>
+                         <form class="navbar-form navbar-right">
+                              <input type="text" name="form-control" placeholder="검색...">
+                         </form>
                     </div>
                </div>
           </nav>
 
           <div class="container">
                <div class="row">
-                    연주
+                    <div class="col-sm-2">
+                         <ul class="nav nav-pills nav-stacked">
+                              <li role="presentation" class="active">전체</li>
+                              <li role="presentation">바이올린</li>
+                              <li role="presentation">피아노</li>
+                              <li role="presentation">기타</li>
+                              <li role="presentation">드럼</li>
+                         </ul>
+                    </div>
+                    <div class="col-sm-10">
+                         <nav>
+                              <ul class="nav nav-pills">
+                                   <li role="presentation" class="dropdown">
+                                        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">카테고리 <span class="caret"></span></a>
+                                   </li>
+                                   <ul class="dropdown-menu">
+                                        <li>바이올린</li>
+                                        <li>피아노</li>
+                                        <li>기타</li>
+                                        <li>드럼</li>
+                                   </ul>
+                              </ul>
+                         </nav>
+                         <table class="table table-hover">
+                              <thead>
+                                   <tr>
+                                        <th>#</th>
+                                        <th>번호</th>
+                                        <th>카테고리</th>
+                                        <th>제목</th>
+                                        <th>작성자</th>
+                                        <th>날짜</th>
+                                        <th>조회수</th>
+                                   </tr>
+                              </thead>
+                              <tbody>
+                                   <tr>
+                                        <td>ㅁ</td>
+                                        <td>5</td>
+                                        <td>기타</td>
+                                        <td>이것이 제목</td>
+                                        <td>싱어</td>
+                                        <td>2017/04/14</td>
+                                        <td>54</td>
+                                   </tr>
+                                   <tr>
+                                        <td>ㅁ</td>
+                                        <td>4</td>
+                                        <td>바이올린</td>
+                                        <td>This is a title</td>
+                                        <td>호랑이</td>
+                                        <td>2017/04/14</td>
+                                        <td>9</td>
+                                   </tr>
+                                   <tr>
+                                        <td>ㅁ</td>
+                                        <td>3</td>
+                                        <td>피아노</td>
+                                        <td>1237584951312</td>
+                                        <td>홍길동</td>
+                                        <td>2017/04/14</td>
+                                        <td>102</td>
+                                   </tr>
+                                   <tr>
+                                        <td>ㅁ</td>
+                                        <td>2</td>
+                                        <td>기타</td>
+                                        <td>가나다라마바</td>
+                                        <td>가디</td>
+                                        <td>2017/04/12</td>
+                                        <td>25</td>
+                                   </tr>
+                                   <tr>
+                                        <td>ㅁ</td>
+                                        <td>1</td>
+                                        <td>드럼</td>
+                                        <td>가나다라마바사아자차카타파하</td>
+                                        <td>ABCDE</td>
+                                        <td>2017/03/10</td>
+                                        <td>894</td>
+                                   </tr>
+                              </tbody>
+                         </table>
+
+                         <button type="button" class="btn btn-default" name="button">목록</button>
+                         <button type="button" class="btn btn-primary" name="button">글쓰기</button>
+
+                         <nav aria-label="Page navigation">
+                              <ul class="pagination">
+                                   <li>
+                                        <a href="#" aria-label="Previous">
+                                             <span aria-hidden="true">&laquo;</span>
+                                        </a>
+                                   </li>
+                                   <li class="active"><a href="#">1</a></li>
+                                   <li class="disabled"><a href="#">2</a></li>
+                                   <li class="disabled"><a href="#">3</a></li>
+                                   <li>
+                                        <a href="#" aria-label="Next">
+                                             <span aria-hidden="true">&raquo;</span>
+                                        </a>
+                                   </li>
+                              </ul>
+                         </nav>
+                    </div>
                </div>
           </div>
+
+          <!-- jQuery -->
+          <script src="//code.jquery.com/jquery.js"></script>
+          <!-- Bootstrap JavaScript -->
+          <!--script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script-->
+          <script src="js/bootstrap.min.js"></script>
+          <!-- Tether -->
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
      </body>
 </html>
