--- a/public_html/views/sheet.ejs
+++ b/public_html/views/sheet.ejs
@@ -2,16 +2,24 @@
 <html>
      <head>
           <meta charset="utf-8">
+          <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
           <title>Music Community</title>
 
           <!-- Bootstrap CSS -->
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+          <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
+          <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+          <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+          <![endif]-->
+
           <!-- Custom Fix -->
           <link rel="stylesheet" type="text/css" href="css/custom.css">
      </head>
 
      <body>
-          <nav class="navbar navbar-fixed-top">
+          <nav class="navbar navbar-default navbar-fixed-top">
                <div class="container">
                     <div class="navbar-header">
                          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -26,8 +34,8 @@
                          <ul class="nav navbar-nav">
                               <li class=""><a href="/index">홈</a></li>
                               <li class=""><a href="/about">소개</a></li>
-                              <li class="active dropdown">커뮤니티
-                                   <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
+                              <li class="active dropdown">
+                                   <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">커뮤니티<span class="caret"></span></a>
                                    <ul class="dropdown-menu">
                                         <li class=""><a href="/play">연주 게시판</a></li>
                                         <li class=""><a href="/mentor">멘토 게시판</a></li>
@@ -35,16 +43,18 @@
                                    </ul>
                               </li>
                          </ul>
+
                          <ul class="nav navbar-nav navbar-right">
-                              <li>
-                                   <div class="form-group">
-                                        <input type="text" name="form-control" placeholder="검색...">
-                                   </div>
+                              <li class="">
+                                   <a href="/mypage"><span class="glyphicon glyphicon-user"></span>내 정보</a>
                               </li>
-                              <li>
-                                   <a href="/login"><span class="glyphicon glyphicon-off yavc-logout"></span>로그인</a>
+                              <li class="">
+                                   <a href="/login"><span class="glyphicon glyphicon-off"></span>로그인</a>
                               </li>
                          </ul>
+                         <form class="navbar-form navbar-right">
+                              <input type="text" name="form-control" placeholder="검색...">
+                         </form>
                     </div>
                </div>
           </nav>
@@ -54,5 +64,13 @@
                     악보
                </div>
           </div>
+
+          <!-- jQuery -->
+          <script src="//code.jquery.com/jquery.js"></script>
+          <!-- Bootstrap JavaScript -->
+          <!--script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script-->
+          <script src="js/bootstrap.min.js"></script>
+          <!-- Tether -->
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
      </body>
 </html>
