[CSS] 1. 본문 내용 윗 여백 늘림 2. a 태그 안의 glyphicon이 있을 경우 우측 여백 늘림 3. table 태그를 사용했을 때 th 태그를 썼을 경우 텍스트 정렬이 중앙으로 되도록 설정 4. 위 메뉴의 검색 공간이 크게 나타나도록 수정 [ROUTE] 1. Mypage 라우팅 추가 [HTML] 1. 소개 샘플 코드 추가 2. Mypage 샘플 코드 추가 3. 연주 게시판에서 불필요한 태그 삭제

--- a/public_html/public/css/custom.css
+++ b/public_html/public/css/custom.css
@@ -11,8 +11,15 @@ Last Updated. 2017-04-14
  *
 ******************************************************/
 body {
-     padding-top: 48px;
+     padding-top: 70px;
      overflow-x: hidden;
+}
+
+a > .glyphicon {
+     margin-right: 5px;
+}
+table > thead > tr > th {
+     text-align: center;
 }
 
 /****************************************
@@ -20,23 +27,31 @@ body {
 ****************************************/
 @media screen and (max-width: 1199px) {
      body {
-          padding-top: 48px;
+          padding-top: 70px;
      }
 }
 
 @media screen and (max-width: 991px) {
      body {
-          padding-top: 96px;
+          padding-top: 118px;
      }
 }
 
 /** For Smartphone **/
 @media screen and (max-width: 767px) {
      body {
-          padding-top: 48px;
+          padding-top: 70px;
      }
 }
 
+/*****************************************************
+ *
+ * [Navi]
+ *
+******************************************************/
+.navbar-form > input {
+     padding: 5px 10px;
+}
 
 /*****************************************************
  *
