--- a/public_html/views/about.ejs
+++ b/public_html/views/about.ejs
@@ -61,7 +61,11 @@
 
           <div class="container">
                <div class="row">
-                    소개
+                    <div class="well">
+                         <h1>- About -</h1>
+                         <h3>Music for relaxing</h3>
+                         <p>소개에 대한 글</p>
+                    </div>
                </div>
           </div>
 
