--- a/public_html/views/mypage.ejs
+++ b/public_html/views/mypage.ejs
@@ -61,7 +61,39 @@
 
           <div class="container">
                <div class="row">
-                    TEST
+                    <div class="col-sm-2">
+                         <ul class="nav nav-pills nav-stacked">
+                              <li role="presentation" class="active">개요</li>
+                              <li role="presentation">기본 설정</li>
+                         </ul>
+                    </div>
+                    <div class="col-sm-10">
+                         <div class="row">
+                              <div class="col-sm-6">
+                                   <h3>내가 쓴 글</h3>
+                                   <p>글들...</p>
+                              </div>
+                              <div class="col-sm-6">
+                                   <h3>내가 쓴 댓글</h3>
+                                   <p>댓글들...</p>
+                              </div>
+                         </div>
+                         <form class="form-horizontal" method="post">
+                              <div class="form-group">
+                                   <label for="inputId" class="col-sm-2 control-label">아이디</label>
+                                   <div class="col-sm-10">
+                                        <input type="email" class="form-control" id="inputId" placeholder="ID">
+                                   </div>
+                              </div>
+                              <div class="form-group">
+                                   <label for="inputEmail" class="col-sm-2 control-label">이메일</label>
+                                   <div class="col-sm-10">
+                                        <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                                   </div>
+                              </div>
+                         </form>
+
+                    </div>
                </div>
           </div>
 
