[HTML] 1. 메뉴 링크 수정, 2. 필요 링크 주소 수정, 3. 연주 게시판의 맨 앞을 체크박스로 변경, 4. 하단에 '목록'과 '글쓰기' 버튼 추가, 5. 하단에 페이지 넘김 추가, 6. 글작성 페이지 추가, 7. 테이블 필요 부분 정렬 수정 [CSS] 테이블 하단 버튼과 페이지 넘김 부분 위치와 정렬 수정 [JS] 1. Board 라우트 추가, 2. Board 라우트로 게시판 기능 추가 - List, Write, 3. MySQL 연결 부분 추가 [Server] 1. MySQL 모듈 추가, 2. Config에 데이터베이스 설정 부분 추가, 3. Board 라우트 연결 설정

--- a/public_html/public/css/custom.css
+++ b/public_html/public/css/custom.css
@@ -58,3 +58,24 @@ table > thead > tr > th {
  * [Home]
  *
 ******************************************************/
+.board-bottom {
+     position: relative;
+}
+.board-bottom .board-bottom-right {
+     position: absolute;
+     top: 0px;
+     right: 0px;
+}
+.board-bottom .board-pagination {
+     text-align: center;
+}
+
+/*****************************************************
+ *
+ * [Play Board]
+ *
+******************************************************/
+/*.board-play > tbody > tr > td:nth-child(1),*/
+.board-play > tbody > tr > td:not(:nth-child(4)) {
+     text-align: center;
+}
