--- a/public_html/views/about.ejs
+++ b/public_html/views/about.ejs
@@ -37,9 +37,9 @@
                               <li class="dropdown">
                                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">커뮤니티<span class="caret"></span></a>
                                    <ul class="dropdown-menu">
-                                        <li class=""><a href="/play">연주 게시판</a></li>
-                                        <li class=""><a href="/mentor">멘토 게시판</a></li>
-                                        <li class=""><a href="/sheet">악보 게시판</a></li>
+                                        <li class=""><a href="/board/play">연주 게시판</a></li>
+                                        <li class=""><a href="/board/mentor">멘토 게시판</a></li>
+                                        <li class=""><a href="/board/sheet">악보 게시판</a></li>
                                    </ul>
                               </li>
                          </ul>
