--- a/public_html/views/_write.ejs
+++ b/public_html/views/_write.ejs
@@ -37,9 +37,9 @@
                               <li class="active dropdown">
                                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">커뮤니티<span class="caret"></span></a>
                                    <ul class="dropdown-menu">
-                                        <li class=""><a href="/board/play">연주 게시판</a></li>
-                                        <li class="active"><a href="/board/mentor">멘토 게시판</a></li>
-                                        <li class=""><a href="/board/sheet">악보 게시판</a></li>
+                                        <li class="active"><a href="/play">연주 게시판</a></li>
+                                        <li class=""><a href="/mentor">멘토 게시판</a></li>
+                                        <li class=""><a href="/sheet">악보 게시판</a></li>
                                    </ul>
                               </li>
                          </ul>
@@ -61,7 +61,26 @@
 
           <div class="container">
                <div class="row">
-                    멘토
+                    <form class="form-horizontal" action="/board/play/write" method="post">
+                         <div class="form-group">
+                              <label for="inputCategory" class="col-sm-2 control-label">카테고리</label>
+                              <div class="col-sm-10">
+                                   <select class="form-control" id="inputCategory">
+                                        <option value="total">전체</option>
+                                        <option value="violin">바이올린</option>
+                                        <option value="piano">피아노</option>
+                                        <option value="guitar">기타</option>
+                                        <option value="drum">드럼</option>
+                                   </select>
+                              </div>
+                         </div>
+                         <div class="form-group">
+                              <label for="inputTitle" class="col-sm-2 control-label">제목</label>
+                              <div class="col-sm-10">
+                                   <input id="inputTitle" type="text" class="form-control" placeholder="제목을 입력하세요." required>
+                              </div>
+                         </div>
+                    </form>
                </div>
           </div>
 
