--- a/public_html/views/sheet.ejs
+++ b/public_html/views/sheet.ejs
@@ -7,7 +7,7 @@
           <title>Music Community</title>
 
           <!-- Bootstrap CSS -->
-          <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+          <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 
           <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -15,7 +15,7 @@
           <![endif]-->
 
           <!-- Custom Fix -->
-          <link rel="stylesheet" type="text/css" href="css/custom.css">
+          <link rel="stylesheet" type="text/css" href="../../css/custom.css">
      </head>
 
      <body>
@@ -37,9 +37,9 @@
                               <li class="active dropdown">
                                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">커뮤니티<span class="caret"></span></a>
                                    <ul class="dropdown-menu">
-                                        <li class=""><a href="/play">연주 게시판</a></li>
-                                        <li class=""><a href="/mentor">멘토 게시판</a></li>
-                                        <li class="active"><a href="/sheet">악보 게시판</a></li>
+                                        <li class=""><a href="/board/play">연주 게시판</a></li>
+                                        <li class=""><a href="/board/mentor">멘토 게시판</a></li>
+                                        <li class="active"><a href="/board/sheet">악보 게시판</a></li>
                                    </ul>
                               </li>
                          </ul>
@@ -69,7 +69,7 @@
           <script src="//code.jquery.com/jquery.js"></script>
           <!-- Bootstrap JavaScript -->
           <!--script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script-->
-          <script src="js/bootstrap.min.js"></script>
+          <script src="../../js/bootstrap.min.js"></script>
           <!-- Tether -->
           <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
      </body>
