--- a/public_html/views/mentor.ejs
+++ b/public_html/views/mentor.ejs
@@ -19,46 +19,7 @@
      </head>
 
      <body>
-          <nav class="navbar navbar-default navbar-fixed-top">
-               <div class="container">
-                    <div class="navbar-header">
-                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                              <span class="sr-only">Toggle navigation</span>
-                              <span class="icon-bar"></span>
-                              <span class="icon-bar"></span>
-                              <span class="icon-bar"></span>
-                         </button>
-                         <a class="navbar-brand" href="#">음악의 대명사</a>
-                    </div>
-                    <div id="navbar" class="navbar-collapse collapse">
-                         <ul class="nav navbar-nav">
-                              <li class=""><a href="/index">홈</a></li>
-                              <li class=""><a href="/about">소개</a></li>
-                              <li class="active dropdown">
-                                   <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">커뮤니티<span class="caret"></span></a>
-                                   <ul class="dropdown-menu">
-                                        <li class=""><a href="/board/play">연주 게시판</a></li>
-                                        <li class="active"><a href="/board/mentor">멘토 게시판</a></li>
-                                        <li class=""><a href="/board/sheet">악보 게시판</a></li>
-                                   </ul>
-                              </li>
-                         </ul>
-
-                         <ul class="nav navbar-nav navbar-right">
-                              <li class="">
-                                   <a href="/mypage"><span class="glyphicon glyphicon-user"></span>내 정보</a>
-                              </li>
-                              <li class="">
-                                   <a href="/login"><span class="glyphicon glyphicon-off"></span>로그인</a>
-                              </li>
-                         </ul>
-                         <form class="navbar-form navbar-right">
-                              <input type="text" name="form-control" placeholder="검색...">
-                         </form>
-                    </div>
-               </div>
-          </nav>
-
+<% include _menu %>
           <div class="container">
                <div class="row">
                     멘토
