[CSS] 1. 로그인 부분 추가 [JS] 1. 공통 부분을 따로 모듈화하여 인클루드하는 방식으로 변경(메뉴, 함수, 기본 내용), 2. 메뉴 주소 오류 수정 [HTML] 1. 로그인 부분 구체화, 2. html 태그 언어 추가, 3. 기타 수정

--- a/public_html/public/css/custom.css
+++ b/public_html/public/css/custom.css
@@ -55,6 +55,23 @@ table > thead > tr > th {
 
 /*****************************************************
  *
+ * [Sign In]
+ *
+******************************************************/
+.signin {
+     text-align: center;
+}
+.signin > ul {
+     margin: 0;
+     padding: 0;
+     list-style: none;
+}
+.signin > ul > li {
+     margin: 10px;
+}
+
+/*****************************************************
+ *
  * [Home]
  *
 ******************************************************/
