--- a/public_html/views/play.ejs
+++ b/public_html/views/play.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
      <head>
           <meta charset="utf-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -32,6 +32,8 @@
                          </ul>
                     </div>
                     <div class="col-sm-10">
+                         <h2 style="border-left: 5px solid skyblue; padding-left: 5px;">연주 게시판</h2>
+                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                          <hr>
                          <ul class="nav nav-pills">
                               <li role="presentation" class="dropdown">
