--- a/public_html/views/_write.ejs
+++ b/public_html/views/_write.ejs
@@ -19,7 +19,8 @@
      </head>
 
      <body>
-          <nav class="navbar navbar-default navbar-fixed-top">
+<% include _menu %>
+          <!--nav class="navbar navbar-default navbar-fixed-top">
                <div class="container">
                     <div class="navbar-header">
                          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -57,7 +58,7 @@
                          </form>
                     </div>
                </div>
-          </nav>
+          </nav-->
 
           <div class="container">
                <div class="row">
