--- a/public_html/views/_write.ejs
+++ b/public_html/views/_write.ejs
@@ -6,6 +6,9 @@
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <title>Music Community</title>
 
+          <!-- SmartEditor2 -->
+          <script type="text/javascript" src="../../smarteditor/js/service/HuskyEZCreator.js" charset="utf-8"></script>
+
           <!-- Bootstrap CSS -->
           <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
 
@@ -81,9 +84,61 @@
                                    <input id="inputTitle" type="text" class="form-control" placeholder="제목을 입력하세요." required>
                               </div>
                          </div>
+                         <div class="form-group">
+                              <label for="inputTitle" class="col-sm-2 control-label">내용</label>
+                              <div class="col-sm-10">
+                                   <form action="/_write/writeok" method="post">
+                                        <textarea name="ir1" id="ir1" rows="10" cols="100" style="width:766px; height:412px; display:none;"></textarea>
+                                   </form>
+                              </div>
+                         </div>
+                         <div class="form-group">
+                              <div class="col-sm-offset-2 col-sm-10">
+                                   <input type="button" class="btn btn-default" onclick="submitContents(this);" value="작성" />
+                              </div>
+                         </div>
                     </form>
                </div>
           </div>
+
+          <!-- SmartEdtior Load -->
+          <script type="text/javascript">
+          var oEditors = {};
+          var sLang = "ko_KR";	// 언어 (ko_KR/ en_US/ ja_JP/ zh_CN/ zh_TW), default = ko_KR
+
+          // IFrame 삽입
+          nhn.husky.EZCreator.createInIFrame({
+          	oAppRef: oEditors,
+          	elPlaceHolder: "ir1",
+          	sSkinURI: "../../smarteditor/SmartEditor2Skin.html",
+          	htParams : {
+          		bUseToolbar : true,				// 툴바 사용 여부 (true:사용/ false:사용하지 않음)
+          		bUseVerticalResizer : true,		// 입력창 크기 조절바 사용 여부 (true:사용/ false:사용하지 않음)
+          		bUseModeChanger : true,			// 모드 탭(Editor | HTML | TEXT) 사용 여부 (true:사용/ false:사용하지 않음)
+          		//bSkipXssFilter : true,		// client-side xss filter 무시 여부 (true:사용하지 않음 / 그외:사용)
+          		//aAdditionalFontList : aAdditionalFontSet,		// 추가 글꼴 목록
+          		fOnBeforeUnload : function(){
+          			//alert("완료!");
+          		},
+          		I18N_LOCALE : sLang
+          	}, //boolean
+          	fOnAppLoad : function(){
+          		//예제 코드
+          		//oEditors.getById["ir1"].exec("PASTE_HTML", ["로딩이 완료된 후에 본문에 삽입되는 text입니다."]);
+          	},
+          	fCreator: "createSEditor2"
+          });
+
+          function submitContents(elClickedObj) {
+          	oEditors.getById["ir1"].exec("UPDATE_CONTENTS_FIELD", []);	// 에디터의 내용이 textarea에 적용됩니다.
+
+          	// 에디터의 내용에 대한 값 검증은 이곳에서 document.getElementById("ir1").value를 이용해서 처리하면 됩니다.
+
+          	try {
+          		elClickedObj.form.submit();
+          	} catch(e) {}
+          }
+          </script>
 
           <!-- jQuery -->
           <script src="//code.jquery.com/jquery.js"></script>
