--- a/public_html/views/_menu.ejs
+++ b/public_html/views/_menu.ejs
@@ -44,9 +44,30 @@
                               <h4 class="modal-title" id="signin">로그인</h4>
                          </div>
                          <div class="modal-body signin">
+                              <p>지금 바로 로그인해서<br>더 많은 음악들을 즐겨보세요!</p>
+                              <form class="form-horizontal" method="post">
+                                   <div class="form-group">
+                                        <label for="" class="col-sm-2 control-label">이메일</label>
+                                        <div class="col-sm-7">
+                                             <input type="email" class="form-control" id="sign-inp-email" name="sign-inp-email" placeholder="이메일을 입력하세요.">
+                                        </div>
+                                        <div class="col-sm-3">
+                                             <button type="button" class="btn btn-default btn-width100 fill-lemon" name="button">로그인</button>
+                                        </div>
+                                   </div>
+                                   <div class="form-group">
+                                        <label for="" class="col-sm-2 control-label">비밀번호</label>
+                                        <div class="col-sm-7">
+                                             <input type="password" class="form-control" id="sign-inp-password" name="sign-inp-password" placeholder="비밀번호를 입력하세요.">
+                                        </div>
+                                        <div class="col-sm-3">
+                                             <button type="button" class="btn btn-default btn-width100 fill-gray" name="button">이렇게 가입</button>
+                                        </div>
+                                   </div>
+                              </form>
                               <ul>
-                                   <li><a class="btn btn-success" href="/auth/login/naver">네이버로 로그인</a></li>
-                                   <li><a class="btn btn-primary" href="/auth/login/facebook">페이스북으로 로그인</a></li>
+                                   <li><a class="btn btn-success btn-width200" href="/auth/login/naver">네이버로 로그인</a></li>
+                                   <li><a class="btn btn-primary btn-width200" href="/auth/login/facebook">페이스북으로 로그인</a></li>
                               </ul>
                          </div>
                     </div>
