--- a/public_html/views/_write.ejs
+++ b/public_html/views/_write.ejs
@@ -65,35 +65,34 @@
 
           <div class="container">
                <div class="row">
-                    <form class="form-horizontal" action="/board/play/write" method="post">
+                    <form class="form-horizontal" action="/board/play/write/writeok" method="post">
+<% if (bid == "sheet" || bid == "play") { %>
                          <div class="form-group">
                               <label for="inputCategory" class="col-sm-2 control-label">카테고리</label>
                               <div class="col-sm-10">
-                                   <select class="form-control" id="inputCategory">
-                                        <option value="total">전체</option>
-                                        <option value="violin">바이올린</option>
-                                        <option value="piano">피아노</option>
-                                        <option value="guitar">기타</option>
-                                        <option value="drum">드럼</option>
+                                   <select class="form-control" id="writeInpCate" name="writeInpCate"><% for (var i = 0; i < boardCategory.length; i++) { %>
+                                        <option value="<%= boardCategory[i].identify %>"><%= boardCategory[i].name %></option><% } %>
                                    </select>
                               </div>
                          </div>
+<% } %>
                          <div class="form-group">
                               <label for="inputTitle" class="col-sm-2 control-label">제목</label>
                               <div class="col-sm-10">
-                                   <input id="inputTitle" type="text" class="form-control" placeholder="제목을 입력하세요." required>
+                                   <input id="writeInpTitle" name="writeInpTitle" type="text" class="form-control" placeholder="제목을 입력하세요." required>
                               </div>
                          </div>
                          <div class="form-group">
                               <label for="inputTitle" class="col-sm-2 control-label">내용</label>
                               <div class="col-sm-10">
                                    <form action="/_write/writeok" method="post">
-                                        <textarea name="ir1" id="ir1" rows="10" cols="100" style="width:766px; height:412px; display:none;"></textarea>
+                                        <textarea name="writeInpContent" id="writeInpContent" rows="10" cols="100" style="width:766px; height:412px; display:none;"></textarea>
                                    </form>
                               </div>
                          </div>
                          <div class="form-group">
                               <div class="col-sm-offset-2 col-sm-10">
+                                   <input type="hidden" id="writeInpBid" name="writeInpBid" value="<%= bid %>">
                                    <input type="button" class="btn btn-default" onclick="submitContents(this);" value="작성" />
                               </div>
                          </div>
@@ -109,7 +108,7 @@
           // IFrame 삽입
           nhn.husky.EZCreator.createInIFrame({
           	oAppRef: oEditors,
-          	elPlaceHolder: "ir1",
+          	elPlaceHolder: "writeInpContent",
           	sSkinURI: "../../smarteditor/SmartEditor2Skin.html",
           	htParams : {
           		bUseToolbar : true,				// 툴바 사용 여부 (true:사용/ false:사용하지 않음)
@@ -130,7 +129,7 @@
           });
 
           function submitContents(elClickedObj) {
-          	oEditors.getById["ir1"].exec("UPDATE_CONTENTS_FIELD", []);	// 에디터의 내용이 textarea에 적용됩니다.
+          	oEditors.getById["writeInpContent"].exec("UPDATE_CONTENTS_FIELD", []);	// 에디터의 내용이 textarea에 적용됩니다.
 
           	// 에디터의 내용에 대한 값 검증은 이곳에서 document.getElementById("ir1").value를 이용해서 처리하면 됩니다.
 
