--- a/public_html/views/play.ejs
+++ b/public_html/views/play.ejs
@@ -22,16 +22,12 @@
 <% include _menu %>
           <div class="container">
                <div class="row">
-                    <div class="col-sm-2">
-                         <ul class="nav nav-pills nav-stacked"><% for (var i = 0; i < boardCategory.length; i++) { %>
-                              <li role="presentation"><a href=""><%= boardCategory[i].name %></a></li><% } %>
-                         </ul>
-                    </div>
-                    <div class="col-sm-10">
-                         <h2 style="border-left: 5px solid skyblue; padding-left: 5px;">연주 게시판</h2>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                         <hr>
-                         <div class="well">
+                    <h2 style="border-left: 5px solid skyblue; padding-left: 5px;">연주 게시판</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    <div class="col-sm-12">
+                         <hr/>
+                         <div class="well play-popular">
                               <h2>인기 게시물</h2>
                               <ul>
                                    <li>1</li>
@@ -41,7 +37,15 @@
                                    <li>5</li>
                               </ul>
                          </div>
-                         <hr>
+                         <hr/>
+                    <div/>
+
+                    <div class="col-sm-2">
+                         <ul class="nav nav-pills nav-stacked"><% for (var i = 0; i < boardCategory.length; i++) { %>
+                              <li role="presentation"><a href=""><%= boardCategory[i].name %></a></li><% } %>
+                         </ul>
+                    </div>
+                    <div class="col-sm-10">
                          <ul class="nav nav-pills">
                               <li role="presentation" class="dropdown">
                                    <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">카테고리 <span class="caret"></span></a>
@@ -120,12 +124,13 @@
                               </tbody>
                          </table>
 
-                         <div class="board-bottom">
+                         <div class="play-bottom">
                               <a class="btn btn-default" href="/board/play/list" role="button">목록</a>
-                              <div class="board-bottom-right">
+                              <div class="play-bottom-right">
                                    <a class="btn btn-primary" href="/board/play/write" role="button">글쓰기</a>
                               </div>
-                              <div class="board-pagination">
+                              
+                              <div class="play-pagination">
                                    <nav aria-label="Page navigation">
                                         <ul class="pagination">
                                              <li>
