--- a/public_html/views/sheet.ejs
+++ b/public_html/views/sheet.ejs
@@ -22,7 +22,85 @@
 <% include _menu %>
           <div class="container">
                <div class="row">
-                    악보
+                    <h2 style="border-left: 5px solid skyblue; padding-left: 5px;">악보 게시판</h2>
+                    <p>연주하고 싶은 악보들을 한번 알아보세요!</p>
+                    <hr>
+
+                    <div class="col-sm-2">
+                         <ul class="nav nav-pills nav-stacked"><% for (var i = 0; i < boardCategory.length; i++) { %>
+                              <li role="presentation"><a href=""><%= boardCategory[i].name %></a></li><% } %>
+                         </ul>
+                    </div>
+                    <div class="col-sm-10 sheet-list">
+                         <div class="sheet-article">
+                              <div class="row">
+                                   <div class="col-sm-1 sheet-id">
+                                        2
+                                   </div>
+                                   <div class="col-sm-2 sheet-img">
+                                        <img src="http://via.placeholder.com/140x100" class="img-thumbnail" alt="">
+                                   </div>
+                                   <div class="col-sm-6 sheet-body">
+                                        <h4>제목이올시다</h4>
+                                        <p>내용입니당</p>
+                                        <p><label class="badge">작성자</label><span>홍길동</span> <label class="badge">날짜</label><span>2017/06/09 14:13:30</span></p>
+                                   </div>
+                                   <div class="col-sm-3 sheet-info">
+                                        <p><span class="glyphicon glyphicon-signal"></span>100</p>
+                                        <p><span class="glyphicon glyphicon-heart"></span>30</p>
+                                        <p><span class="glyphicon glyphicon-thumbs-up"></span>28</p>
+                                   </div>
+                              </div>
+                         </div>
+
+                         <div class="sheet-article">
+                              <div class="row">
+                                   <div class="col-sm-1 sheet-id">
+                                        1
+                                   </div>
+                                   <div class="col-sm-2 sheet-img">
+                                        <img src="http://via.placeholder.com/140x100" class="img-thumbnail" alt="">
+                                   </div>
+                                   <div class="col-sm-6 sheet-body">
+                                        <h4>제목이올시다</h4>
+                                        <p>내용입니당</p>
+                                        <p><label class="badge">작성자</label><span>홍길동</span> <label class="badge">날짜</label><span>2017/06/09 14:13:30</span></p>
+                                   </div>
+                                   <div class="col-sm-3 sheet-info">
+                                        <p><span class="glyphicon glyphicon-signal"></span>100</p>
+                                        <p><span class="glyphicon glyphicon-heart"></span>30</p>
+                                        <p><span class="glyphicon glyphicon-thumbs-up"></span>28</p>
+                                   </div>
+                              </div>
+                         </div>
+
+                         <div class="sheet-bottom">
+                              <a class="btn btn-default" href="/board/sheet/list" role="button">목록</a>
+                              <div class="sheet-bottom-right">
+                                   <a class="btn btn-primary" href="/board/sheet/write" role="button">글쓰기</a>
+                              </div>
+
+                              <div class="sheet-pagination">
+                                   <nav aria-label="Page navigation">
+                                        <ul class="pagination">
+                                             <li>
+                                                  <a href="#" aria-label="Previous">
+                                                       <span aria-hidden="true">&laquo;</span>
+                                                  </a>
+                                             </li>
+                                             <li class="active"><a href="#">1</a></li>
+                                             <li class="disabled"><a href="#">2</a></li>
+                                             <li class="disabled"><a href="#">3</a></li>
+                                             <li>
+                                                  <a href="#" aria-label="Next">
+                                                       <span aria-hidden="true">&raquo;</span>
+                                                  </a>
+                                             </li>
+                                        </ul>
+                                   </nav>
+                              </div>
+                         </div>
+                    </div>
                </div>
           </div>
 
